Refactored Items Assembly

--- a/Assets/Item/Scripts/Items.asmdef
+++ b/Assets/Item/Scripts/Items.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "ItemAssembly",
-    "rootNamespace": "items",
+    "name": "Items",
+    "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
