--- a/Assets/Game Manager/GameManagerTests/GameManagerTests.asmdef
+++ b/Assets/Game Manager/GameManagerTests/GameManagerTests.asmdef
@@ -3,8 +3,7 @@
     "rootNamespace": "",
     "references": [
         "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner",
-        "ItemAssemblyDefinition"
+        "UnityEditor.TestRunner"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
