--- a/Assets/Level-Gen/LevelGen.asmdef
+++ b/Assets/Level-Gen/LevelGen.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "LevelGen",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:250b2ea047c69c74d97a0b7b2f5e628f"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
