Renamed Test Assembly

--- a/Assets/Level-Gen/Tests/LevelGen.Test.asmdef
+++ b/Assets/Level-Gen/Tests/LevelGen.Test.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "LevelGenTests",
-    "rootNamespace": "",
+    "name": "LevelGen.Test",
+    "rootNamespace": "LevelGen",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
