--- a/Assets/Level-Gen/LevelGen.asmdef
+++ b/Assets/Level-Gen/LevelGen.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "LevelGen",
-    "rootNamespace": "",
+    "rootNamespace": "LevelGen",
     "references": [
         "GUID:250b2ea047c69c74d97a0b7b2f5e628f"
     ],
