Added pause behaviour for enemies. Reference EnemyManager.instance.PauseEnemies

--- a/Assets/GameManager/GameManager.asmdef
+++ b/Assets/GameManager/GameManager.asmdef
@@ -6,7 +6,8 @@
         "GUID:f2622d42528eb6445b697c000cdc8fb3",
         "GUID:f7dc861e82e8b2145a450e0b90e824ad",
         "GUID:13f139f323f2dc848bd56543c6248be4",
-        "GUID:68212bfad19e82b44a9b9b045867aefa"
+        "GUID:68212bfad19e82b44a9b9b045867aefa",
+        "GUID:bd0ca4ea30cdc9448bfa7b13d9feab3a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
