--- a/Assets/Item/Scripts/Items.asmdef
+++ b/Assets/Item/Scripts/Items.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Items",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:bd0ca4ea30cdc9448bfa7b13d9feab3a"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
