--- a/Assets/PlayerController/PlayerController.asmdef
+++ b/Assets/PlayerController/PlayerController.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "PlayerContoller",
     "references": [
         "GUID:250b2ea047c69c74d97a0b7b2f5e628f",
-        "GUID:f2622d42528eb6445b697c000cdc8fb3"
+        "GUID:f2622d42528eb6445b697c000cdc8fb3",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
